# ragbear

./: .gitignore  CITATION.cff  LICENSE  README.md  config.yaml  pyproject.toml
examples/: simple.py  with_config.py
ragbear/: __init__.py  __main__.py  _entry.py  answer.py  config.py
ragbear/dababase/: ingest.py  schema.py
ragbear/dababase/ingest/: extract.py
ragbear/database/index/: hnsw.py
ragbear/database/remote/: duckduckgo.py
ragbear/index/: find.py
ragbear/model/: __init__.py
ragbear/postprocess/: rank.py
ragbear/query/: prompts.py
tests/: test_extract.py
